// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoCoordinatesField component should render default view 1`] = `
<Memo(PublicationMap)
  coordinates=""
  country="AU"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`GeoCoordinatesField component should render default view for AU 1`] = `
<Memo(PublicationMap)
  coordinates=""
  country="AU"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`GeoCoordinatesField component should render default view for CN 1`] = `
<Memo(PublicationMap)
  coordinates=""
  country="CN"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;
